@@ -91,8 +91,9 @@ $Id$
 + [core] Dropped AllowAnywhereRecoding configuration variable.
 - rfe #3016457 [interface] Define tab order in SQL form to allow easier tab
   navigation.
-+ [code] Centralized format string expansion, @VARIABLES@ are recommended way
-  now.
++ [core] Centralized format string expansion, @VARIABLES@ are recommended way
+  now, used by file name templates, default queries, export and title
+  generating.
 + [validator] SQL validator works also with SOAP PHP extension.
 - [interface] Better formatting for SQL validator results.
 - [doc] The linked-tables infrastructure is now called phpMyAdmin
